fix wrapping

--- a/app/javascript/components/workflows/index.scss
+++ b/app/javascript/components/workflows/index.scss
@@ -58,6 +58,7 @@
 
 .wrap-anywhere {
   word-wrap: anywhere;
+  white-space: break-spaces;
 }
 
 .column-count-4 {
